--- a/index.html
+++ b/index.html
@@ -3,14 +3,29 @@
 
 <head>
     <title>Vue Mastery Course</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 
 <body>
+    <div class="nav-bar"></div>
+
     <div id="app">
-        <h1>{{ product }}</h1>
-        <p>{{ discription }}</p>
+        <div class="product">
+
+            <div class="product-image">
+                <img v-bind:src="image">
+            </div>
+
+            <div class="product-info">
+                <h1>{{ product }}</h1>
+                <p>{{ discription }}</p>
+                <a v-bind:href="link">link to product</a>
+            </div>
+
+        </div>
     </div>
+
     <script src="main.js"></script>
 </body>
 
