--- a/index.html
+++ b/index.html
@@ -20,10 +20,20 @@
             <div class="product-info">
                 <h1>{{ product }}</h1>
                 <p>{{ discription }}</p>
-                <a v-bind:href="link">link to product</a>
+                <a v-bind:href="link">Click here to view Product Image</a>
                 <p v-if="instock">In Stock</p>
                 <p v-else>Out of Stock</p>
                 <span v-if="onSale">On Sale!</span>
+                <ul>
+                    <li v-for="detail in details">{{ detail }}</li>
+                </ul>
+                <div v-for="variant in variants" :key="variant.variantId">
+                    <p>{{ variant.variantColor }}</p>
+                </div>
+                <p>Available Size:</p>
+                <ul>
+                    <li v-for="size in sizes">{{ size }}</li>
+                </ul>
             </div>
 
         </div>
