--- a/index.html
+++ b/index.html
@@ -28,12 +28,19 @@
                     <li v-for="detail in details">{{ detail }}</li>
                 </ul>
                 <div v-for="variant in variants" :key="variant.variantId">
-                    <p>{{ variant.variantColor }}</p>
+                    <p @mouseover="updateProduct(variant.variantImage)">{{ variant.variantColor }}</p>
                 </div>
                 <p>Available Size:</p>
                 <ul>
                     <li v-for="size in sizes">{{ size }}</li>
                 </ul>
+
+                <button v-on:click="addToCart">Add to cart</button>
+                <button @click="removeFromCart">Remove from cart</button>
+
+                <div class="cart">
+                    <p>Cart({{ cart }})</p>
+                </div>
             </div>
 
         </div>
