class and style - challenge 6

--- a/index.html
+++ b/index.html
@@ -21,21 +21,24 @@
                 <h1>{{ product }}</h1>
                 <p>{{ discription }}</p>
                 <a v-bind:href="link">Click here to view Product Image</a>
-                <p v-if="instock">In Stock</p>
-                <p v-else>Out of Stock</p>
+                <p v-if="inStock">In Stock</p>
+                <p v-else :class="{ outOfStock: !inStock }">Out of Stock</p>
                 <span v-if="onSale">On Sale!</span>
                 <ul>
                     <li v-for="detail in details">{{ detail }}</li>
                 </ul>
-                <div v-for="variant in variants" :key="variant.variantId">
-                    <p @mouseover="updateProduct(variant.variantImage)">{{ variant.variantColor }}</p>
+                <p>Choose Color:</p>
+                <div class="color-box" v-for="variant in variants" :key="variant.variantId"
+                    :style="{ backgroundColor: variant.variantColor }" @mouseover="updateProduct(variant.variantImage)">
                 </div>
                 <p>Available Size:</p>
                 <ul>
                     <li v-for="size in sizes">{{ size }}</li>
                 </ul>
 
-                <button v-on:click="addToCart">Add to cart</button>
+                <button v-on:click="addToCart" :disabled="!inStock"
+                    :class="{ disabledButton: !inStock, outOfStockButton: !inStock }">Add to
+                    cart</button>
                 <button @click="removeFromCart">Remove from cart</button>
 
                 <div class="cart">
