--- a/index.html
+++ b/index.html
@@ -11,42 +11,7 @@
     <div class="nav-bar"></div>
 
     <div id="app">
-        <div class="product">
-
-            <div class="product-image">
-                <img v-bind:src="image">
-            </div>
-
-            <div class="product-info">
-                <h1>{{ title }}</h1>
-                <p>{{ discription }}</p>
-                <a v-bind:href="link">Click here to view Product Image</a>
-                <p v-if="inStock">In Stock</p>
-                <p v-else :class="{ outOfStock: !inStock }">Out of Stock</p>
-                <p>{{ sale }}</p>
-                <ul>
-                    <li v-for="detail in details">{{ detail }}</li>
-                </ul>
-                <p>Choose Color:</p>
-                <div class="color-box" v-for="(variant,index) in variants" :key="variant.variantId"
-                    :style="{ backgroundColor: variant.variantColor }" @mouseover="updateProduct(index)">
-                </div>
-                <p>Available Size:</p>
-                <ul>
-                    <li v-for="size in sizes">{{ size }}</li>
-                </ul>
-
-                <button v-on:click="addToCart" :disabled="!inStock"
-                    :class="{ disabledButton: !inStock, outOfStockButton: !inStock }">Add to
-                    cart</button>
-                <button @click="removeFromCart">Remove from cart</button>
-
-                <div class="cart">
-                    <p>Cart({{ cart }})</p>
-                </div>
-            </div>
-
-        </div>
+        <product :premium="premium"></product>
     </div>
 
     <script src="main.js"></script>
